--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>3D Function</title>
-        <script src="script.js" charset="utf-8" defer></script>
+        <script src="script.js" charset="utf-8" defer type="module"></script>
         <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     </head>
     <body>
-        <input type="text" value="Math.sqrt(x * x + y * y)" name="" id="" />
+        <input type="text" value="sqrt(x * x + y * y)" name="" id="" />
     </body>
 </html>
