changed grid size and initial value

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     </head>
     <body>
-        <input type="text" value="sqrt(x * x + y * y)" name="" id="" />
+        <input type="text" value="sqrt(x ^ 4 + y ^ 4)" name="" id="" />
     </body>
 </html>
